# den-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/denai/: __init__.py  agent.py  auth.py  card.py  card_png.py  cli.py  editor.py  extract.py  rebuild.py  report.py
src/denai/web/: __init__.py  server.py
src/denai/web/static/: index.html
tests/: test_auth.py  test_editor.py  test_extract.py  test_features.py  test_web.py
