[project]
name = "denai"
version = "0.1.0"
description = "The AI critic that roasts your decks and reports — then rebuilds them better."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniele Castellari" }]
keywords = ["ai", "agent", "powerpoint", "word", "review", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-pptx>=1.0.0",
    "python-docx>=1.1.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/Dany-mc/den-AI"
Issues = "https://github.com/Dany-mc/den-AI/issues"

[project.scripts]
denai = "denai.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/denai"]
